[package]
name = "blinky"
version = "0.1.0"
authors = ["Muhammad Sulthan Mazaya <msulthanmazaya@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-probe = { version = "0.3.1", features = ["defmt"] }


[dependencies.stm32f3xx-hal]
version = "0.10.0"
features = ["stm32f303xc", "defmt", ]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
