[package]
name = "blinky"
version = "0.1.0"
authors = ["Muhammad Sulthan Mazaya <msulthanmazaya@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2.0"


[dependencies.stm32f3xx-hal]
git = "https://github.com/stm32-rs/stm32f3xx-hal"
features = ["stm32f303xc", ]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
