[package]
name = "rust-rtic"
version = "0.1.0"
authors = ["Muhammad Sulthan Mazaya <msulthanmazaya@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m-rt = "0.7"
panic-semihosting = "0.6.0"
lsm303dlhc = "0.2.0"
cortex-m-semihosting = "0.5"
rtic-sync = "1.3"

[dependencies.stm32f3xx-hal]
version = "0.10.0"
features = ["stm32f303xc", ]

[dependencies.rtic]
version = "2.0.0"
features = ["thumbv7-backend"]

[dependencies.rtic-monotonics]
version = "2.0.0"
features = ["cortex-m-systick"]

[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
